# EEG-pipeline-compare

./: .gitignore  .pre-commit-config.yaml  README.md  example-run.sh  note.txt  pyproject.toml  requirements.txt
eeg-pipeline-compare/: _analysis.py  _io.py  _ios.py  _logger.py  _metrics.py  _metrics_diff.py  _viz.py  config.yaml  result.json  run.py
eeg-pipeline-compare/data/: _metrics.json  analysis.json  checks.py  metrics.json  signals.json  steps.json
